@@ -7,20 +7,17 @@
 
 DEMOS = 10threads.sl answer.sl fibonacci.sl helloworld.sl roman.sl 
 EXTRA_DEMOS = fft.sl
-
-noinst_PROGRAMS = fft_gentable
-fft_gentable_SOURCES = fft_gentable.c
-
-BUILT_SOURCES = fft_table.slh
-
 ALL_DEMOS = $(DEMOS) $(EXTRA_DEMOS)
 EXTRA_DIST = $(ALL_DEMOS)
+
+# Definitions for "make check":
 
 TESTS = $(DEMOS)
 include $(top_srcdir)/tests.mk
 
+# Also build demos during "make all":
+
 noinst_DATA = $(ALL_DEMOS:.sl=.mtalpha-x) $(ALL_DEMOS:.sl=.ptl-x) $(ALL_DEMOS:.sl=.seqc-x)
-CLEANFILES = $(noinst_DATA)
 
 SUFFIXES = .sl .mtalpha-x
 
@@ -33,6 +30,14 @@ SUFFIXES = .sl .mtalpha-x
 .sl.seqc-x:
 	$(SLC) -b seqc -o $@ $<
 
+# Special targets for the FFT demo:
+
+noinst_PROGRAMS = fft_gentable
+fft_gentable_SOURCES = fft_gentable.c
+BUILT_SOURCES = fft_table.slh
+
 fft_table.slh: fft_gentable$(EXEEXT)
 	./fft_gentable$(EXEEXT) >$@
+
+CLEANFILES = $(noinst_DATA) $(BUILT_SOURCES)
 
